--- a/WebKuantoKustaScrapper/Views/Shared/_Layout.cshtml
+++ b/WebKuantoKustaScrapper/Views/Shared/_Layout.cshtml
@@ -4,12 +4,12 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - WebKuantoKustaScrapper</title>
-	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/sandstone/bootstrap.min.css" />
 	<link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 			<div class="container">
 				<a class="navbar-brand text-light font-weight-bolder" asp-area="" asp-controller="Home" asp-action="Index">Descontos em Portugal</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -41,7 +41,7 @@
 		</main>
 	</div>
 
-	<footer class="border-top footer text-muted bg-dark">
+	<footer class="border-top footer text-muted navbar-dark bg-primary">
 		<div class="container text-light">
 			<span class="text-light">
 				&copy; 2020 - Descontos em Portugal -
