Commit(25/07/2020) Adicionado: -View "ContactUs" -Margem para se afastar do navbar em todos as views -Disclaimer
Alterado:
-Site completamente em português
-Algum Styling às views

--- a/WebKuantoKustaScrapper/Views/Shared/_Layout.cshtml
+++ b/WebKuantoKustaScrapper/Views/Shared/_Layout.cshtml
@@ -21,14 +21,23 @@
 						<li class="nav-item">
 							<a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
+
+						<li class="nav-item">
+							<a class="nav-link text-light" asp-area="" asp-controller="ProductPrice" asp-action="Index">Produtos</a>
+						</li>
+
+						<li class="nav-item">
+							<a class="nav-link text-light" asp-area="" asp-controller="Websites" asp-action="Index">Websites</a>
+						</li>
+
+						<li class="nav-item">
+							<a class="nav-link text-light" asp-area="" asp-action="Index">About</a>
+						</li>
 						<li class="nav-item">
 							<a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-light" asp-area="" asp-controller="Websites" asp-action="Index">Websites</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link text-light" asp-area="" asp-controller="ProductPrice" asp-action="Index">Produtos</a>
+							<a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="ContactUs">Entra em contacto connosco</a>
 						</li>
 					</ul>
 				</div>
@@ -46,6 +55,15 @@
 			<span class="text-light">
 				&copy; 2020 - Descontos em Portugal -
 			</span>
+			<div class=" footer-info-wrap">
+				<p class="footer-info">
+					O site em questão não tem como objetivo vender ou promover qualquer tipo de loja,
+					é fundamentalmente um espaço criado com intuito de partilhar de forma gratuita as promoções presentes nas lojas Portuguesas.
+					É também importante realçar que o preço assim como a viabilidade do produto é está aos cuidados da lojas que as vendem.
+					sendo estando ao cuidado das lojas nacionais que vendem os produtos.
+					Este site não é endossado pelo kuantokusta.pt
+				</p>
+			</div>
 			<a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 		</div>
 	</footer>
