--- a/WebKuantoKustaScrapper/Views/ProductPrice/Index.cshtml
+++ b/WebKuantoKustaScrapper/Views/ProductPrice/Index.cshtml
@@ -61,7 +61,7 @@
 					<img src="@Html.DisplayFor(modelItem => item.Imagem)">
 				</div>
 				<figcaption class="info-wrap">
-					<h6 class="title text-dots"><a href="#" class="product-link">@Html.DisplayFor(modelItem => item.Nome)</a></h6>
+					<h6 class="mb-4 "><a href="#" class="product-link">@Html.DisplayFor(modelItem => item.Nome)</a></h6>
 					<div class="action-wrap">
 						<a href="@Html.DisplayFor(modeItem => item.Website)" class="btn btn-primary btn-sm float-right "> Ver Produto </a>
 						<div class="price-wrap h5">
