--- a/WebKuantoKustaScrapper/Views/Websites/Create.cshtml
+++ b/WebKuantoKustaScrapper/Views/Websites/Create.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Adiciona</h1>
 
 <h4>Website</h4>
 <hr />
@@ -18,14 +18,14 @@
 				<span asp-validation-for="SiteUrl" class="text-danger"></span>
 			</div>
 			<div class="form-group">
-				<input type="submit" value="Create" class="btn btn-primary" />
+				<input type="submit" value="Adicionar" class="btn btn-primary" />
 			</div>
 		</form>
 	</div>
 </div>
 
 <div>
-	<a asp-action="Index">Back to List</a>
+	<a asp-action="Index">Voltar ao menu</a>
 </div>
 
 @section Scripts {
