--- a/WebKuantoKustaScrapper/Views/Websites/Delete.cshtml
+++ b/WebKuantoKustaScrapper/Views/Websites/Delete.cshtml
@@ -4,9 +4,9 @@
 	ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Apagar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem a certeza que pretende apagar o site?</h3>
 <div>
 	<h4>Website</h4>
 	<hr />
@@ -21,7 +21,7 @@
 
 	<form asp-action="Delete">
 		<input type="hidden" asp-for="IdWebsite" />
-		<input type="submit" value="Delete" class="btn btn-danger" /> |
-		<a asp-action="Index">Back to List</a>
+		<input type="submit" value="Apagar" class="btn btn-danger" /> |
+		<a asp-action="Index">Voltar ao menu</a>
 	</form>
 </div>
