--- a/WebKuantoKustaScrapper/wwwroot/css/site.css
+++ b/WebKuantoKustaScrapper/wwwroot/css/site.css
@@ -1,6 +1,8 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
 a.navbar-brand {
 	white-space: normal;
 	text-align: center;
@@ -62,7 +64,7 @@ html {
 
 body {
 	/* Margin bottom by footer height */
-	margin-bottom: 60px;
+	margin-bottom: 350px;
 }
 
 .footer {
@@ -109,7 +111,7 @@ body {
 }
 
 	.card-product:hover {
-		text-shadow: 0px 2px 2px rgba(255, 255, 255, 0.4);
+		box-shadow: 0 0 11px rgba(33,33,33,.2);
 	}
 
 	.card-product .img-wrap {
@@ -149,6 +151,54 @@ body {
 	vertical-align: middle;
 }
 
-.card-product .price-old {
-	color: #999;
+.card-product .price-new {
+	color: #222;
+	font-family: 'Anton', sans-serif;
+}
+
+.footer-block {
+	display: block;
+	width: 100%;
+}
+
+.footer-info-wrap {
+	white-space: normal;
+	max-width: 300px;
+	line-height: normal;
+}
+
+/*Contact us*/
+
+/* Style inputs with type="text", select elements and textareas */
+.form-contact > select, .form-contact > input, .form-contact > textarea {
+	width: 100%; /* Full width */
+	padding: 12px; /* Some padding */
+	border: 1px solid #ccc; /* Gray border */
+	border-radius: 4px; /* Rounded borders */
+	box-sizing: border-box; /* Make sure that padding and width stays in place */
+	margin-top: 6px; /* Add a top margin */
+	margin-bottom: 16px; /* Bottom margin */
+	resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+.btn-submit {
+	background-color: #4CAF50;
+	color: white;
+	padding: 12px 20px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+	/* When moving the mouse over the submit button, add a darker green color */
+	.btn-submit:hover {
+		background-color: #45a049;
+	}
+
+/* Add a background color and some padding around the form */
+.container-contact-form {
+	border-radius: 5px;
+	background-color: #f2f2f2;
+	padding: 20px;
 }
