--- a/WebKuantoKustaScrapper/Views/Shared/_Layout.cshtml
+++ b/WebKuantoKustaScrapper/Views/Shared/_Layout.cshtml
@@ -5,7 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - WebKuantoKustaScrapper</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/sandstone/bootstrap.min.css" />
-	<link rel="stylesheet" href="~/css/site.css" />
+	<link rel="stylesheet" href="~/css/main-layout.css" />
+	<link rel="stylesheet" href="~/css/contact-us.css" />
+	<link rel="stylesheet" href="~/css/product-price.css" />
+	<link rel="stylesheet" href="~/css/simple-sidebar.css" />
 </head>
 <body>
 	<header>
