--- a/WebKuantoKustaScrapper/Views/Shared/_Layout.cshtml
+++ b/WebKuantoKustaScrapper/Views/Shared/_Layout.cshtml
@@ -72,7 +72,9 @@
 	</footer>
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
+	<script src="~/js/productChart" asp-append-version="true"></script>
 	@RenderSection("Scripts", required: false)
 </body>
 </html>
