--- a/WebKuantoKustaScrapper/Views/_ViewImports.cshtml
+++ b/WebKuantoKustaScrapper/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WebKuantoKustaScrapper
 @using WebKuantoKustaScrapper.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, WebKuantoKustaScrapper
