--- a/WebKuantoKustaScrapper/Views/Shared/_Layout.cshtml
+++ b/WebKuantoKustaScrapper/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
 							<a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="ContactUs">Entra em contacto connosco</a>
+							<a class="nav-link text-light" asp-area="" asp-controller="ContactUs" asp-action="Index">Entra em contacto connosco</a>
 						</li>
 					</ul>
 				</div>
