--- a/src/DescontosEmPortugal.Web/Views/Shared/Components/ChartJs/default.cshtml
+++ b/src/DescontosEmPortugal.Web/Views/Shared/Components/ChartJs/default.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebKuantoKustaScrapper.ViewModel.ChartJsViewModel
+﻿@model DescontosEmPortugal.Web.ViewModel.ChartJsViewModel
 
 <div class="chart-container" width="600" height="400">
 	<canvas id="myChart"></canvas>
