--- a/src/DescontosEmPortugal.Web/Views/Websites/Details.cshtml
+++ b/src/DescontosEmPortugal.Web/Views/Websites/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebKuantoKustaScrapper.Models.Website
+﻿@model DescontosEmPortugal.Web.Models.Website
 
 @{
 	ViewData["Title"] = "Details";
