--- a/src/DescontosEmPortugal.Web/Views/Websites/Index.cshtml
+++ b/src/DescontosEmPortugal.Web/Views/Websites/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebKuantoKustaScrapper.Models.Website>
+﻿@model IEnumerable<DescontosEmPortugal.Web.Models.Website>
 
 @{
 	ViewData["Title"] = "Index";
