--- a/src/DescontosEmPortugal.Web/Views/_ViewImports.cshtml
+++ b/src/DescontosEmPortugal.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using WebKuantoKustaScrapper
-@using WebKuantoKustaScrapper.Models
+﻿@using DescontosEmPortugal.Web
+@using DescontosEmPortugal.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, WebKuantoKustaScrapper
+@addTagHelper *, DescontosEmPortugal.Web
