--- a/src/DescontosEmPortugal.Web/Views/ContactUs/Index.cshtml
+++ b/src/DescontosEmPortugal.Web/Views/ContactUs/Index.cshtml
@@ -1,18 +1,18 @@
-﻿@model WebKuantoKustaScrapper.ViewModel.ContactViewModel
+﻿@model DescontosEmPortugal.Web.ViewModel.ContactViewModel
 <form asp-action="Contact" method="post">
 	<div class="container container-contact-form form-contact mt-3">
-	<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
 		<label asp-for="@Model.FirstName">Primeiro Nome</label>
-		<input asp-for="@Model.FirstName" type="text" id="fname" placeholder="O teu primeiro nome..." >
+		<input asp-for="@Model.FirstName" type="text" id="fname" placeholder="O teu primeiro nome...">
 		<span asp-validation-for="@Model.FirstName" class="text-danger d-block mb-1"></span>
 
 		<label asp-for="@Model.LastName">Último Nome</label>
-		<input asp-for="@Model.LastName" type="text" id="lname" placeholder="O teu último nome" >
+		<input asp-for="@Model.LastName" type="text" id="lname" placeholder="O teu último nome">
 		<span asp-validation-for="@Model.LastName" class="text-danger d-block mb-1"></span>
 
 		<label asp-for="@Model.Email">Email</label>
-		<input asp-for="@Model.Email" type="text" id="lname" placeholder="email..." >
+		<input asp-for="@Model.Email" type="text" id="lname" placeholder="email...">
 		<span asp-validation-for="@Model.Email" class="text-danger d-block mb-1"> </span>
 
 		<label asp-for="@Model.Country">País</label>
