--- a/src/DescontosEmPortugal.Web/Views/ProductPrice/Details.cshtml
+++ b/src/DescontosEmPortugal.Web/Views/ProductPrice/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebKuantoKustaScrapper.ViewModel.ChartJsViewModel
+﻿@model DescontosEmPortugal.Web.ViewModel.ChartJsViewModel
 
 @{
 	ViewData["Title"] = "Details";
@@ -60,35 +60,35 @@
 </vc:chartjs>
 
 @*<vc:chartjs chart-data="{
-	type: 'line',
-	data: {
-	labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
-	datasets: [{
-	label: 'My First dataset',
-	data: [90.5, 59, 80, 81, 56, 55, 40],
-	backgroundColor: [
-	'rgba(105, 0, 132, .2)',
-	],
-	borderColor: [
-	'rgba(200, 99, 132, .7)',
-	],
-	borderWidth: 2
-	},
-	{
-	label: 'My Second dataset',
-	data: [28, 48, 40, 19, 86, 27, 90],
-	backgroundColor: [
-	'rgba(0, 137, 132, .2)',
-	],
-	borderColor: [
-	'rgba(0, 10, 130, .7)',
-	],
-	borderWidth: 2
-	}
-	]
-	},
-	options: {
-	responsive: true
-	}
-	}">
+			type: 'line',
+			data: {
+			labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
+			datasets: [{
+			label: 'My First dataset',
+			data: [90.5, 59, 80, 81, 56, 55, 40],
+			backgroundColor: [
+			'rgba(105, 0, 132, .2)',
+			],
+			borderColor: [
+			'rgba(200, 99, 132, .7)',
+			],
+			borderWidth: 2
+			},
+			{
+			label: 'My Second dataset',
+			data: [28, 48, 40, 19, 86, 27, 90],
+			backgroundColor: [
+			'rgba(0, 137, 132, .2)',
+			],
+			borderColor: [
+			'rgba(0, 10, 130, .7)',
+			],
+			borderWidth: 2
+			}
+			]
+			},
+			options: {
+			responsive: true
+			}
+			}">
 	</vc:chartjs>*@
