--- a/src/DescontosEmPortugal.Web/Views/ProductPrice/Index.cshtml
+++ b/src/DescontosEmPortugal.Web/Views/ProductPrice/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebKuantoKustaScrapper.Helpers.PaginatedListProducts<WebKuantoKustaScrapper.Models.Product>
+﻿@model DescontosEmPortugal.Web.Helpers.PaginatedListProducts<DescontosEmPortugal.Web.Models.Product>
 
 @{
 	ViewData["Title"] = "Index";
@@ -16,14 +16,15 @@
 	</select>*@
 
 <div id="leftbar" class="bg-dark border rounded">
-	<form asp-controller="ProductPrice" asp-action="Index" method="get" asp-route-categoria="@TempData["CurrentCategory"]" asp-route-q="@ViewData["CurrentSearch"]">
+	<form asp-controller="ProductPrice" asp-action="Index" method="get">
 		<div class="form-group">
 			<div class="text-dark border-bottom bg-light"> Aplica filtro</div>
 			<div class="p-1">
-				<input name="lowestPriceEver" value="true" type="checkbox" checked="@ViewData["LowestPriceParm"]" />
+				<input class="toggle" name="lowestPriceEver" value="true" type="checkbox" checked="@ViewData["LowestPriceParm"]" />
+
 				@*<input type="checkbox" name="lowestPriceEver" data-val="true" id="lowestPriceEver" value="true" checked />
 					<input type="hidden" value="false" name="lowestPriceEver" />*@
-				<label class="text-body">Lowest Price Ever</label>
+				<a asp-route-categoria="@TempData["CurrentCategory"]" asp-route-q="@ViewData["CurrentSearch"]" class="text-body">Lowest Price Ever</a>
 			</div>
 		</div>
 		<button type="submit" class="btn btn-primary m-1 btn-sm">
@@ -32,6 +33,8 @@
 		</button>
 	</form>
 </div>
+
+@*int idCategoria = 0;*@
 
 @if (Model.Count > 0)
 {
@@ -67,10 +70,10 @@
 
 		<div class=" row mt-1 mb-1 bg-light border border-dark rounded bar-sort">
 
-			<a asp-action="Index" asp-route-categoria="@TempData["CurrentCategory"]" asp-route-sortBy="@TempData["NameSortParm"]" asp-route-q="@ViewData["CurrentSearch"]" class="col-3 border-right"> Nome</a>
-			<a asp-action="Index" asp-route-categoria="@TempData["CurrentCategory"]" asp-route-sortBy="@TempData["PriceSortParm"]" asp-route-q="@ViewData["CurrentSearch"]" class="col-3 border-right"> Preço</a>
-			<a asp-action="Index" asp-route-categoria="@TempData["CurrentCategory"]" asp-route-sortBy="@TempData["PopularitySortParm"]" asp-route-q="@ViewData["CurrentSearch"]" class="col-3 border-right">Popularidade</a>
-			<a asp-action="Index" asp-route-categoria="@TempData["CurrentCategory"]" asp-route-sortBy="@TempData["DateSortParm"]" asp-route-q="@ViewData["CurrentSearch"]" class="col-3 border-right">Data</a>
+			<a asp-action="Index" asp-route-categoria="@TempData["CurrentCategory"]" asp-route-sortBy="@TempData["NameSortParm"]" asp-route-q="@ViewData["CurrentSearch"]" asp-route-LowestPriceEver=@ViewData["LowestPriceParm"] class="col-3 border-right"> Nome</a>
+			<a asp-action="Index" asp-route-categoria="@TempData["CurrentCategory"]" asp-route-sortBy="@TempData["PriceSortParm"]" asp-route-q="@ViewData["CurrentSearch"]" asp-route-LowestPriceEver=@ViewData["LowestPriceParm"] class="col-3 border-right"> Preço</a>
+			<a asp-action="Index" asp-route-categoria="@TempData["CurrentCategory"]" asp-route-sortBy="@TempData["PopularitySortParm"]" asp-route-q="@ViewData["CurrentSearch"]" asp-route-LowestPriceEver=@ViewData["LowestPriceParm"] class="col-3 border-right">Popularidade</a>
+			<a asp-action="Index" asp-route-categoria="@TempData["CurrentCategory"]" asp-route-sortBy="@TempData["DateSortParm"]" asp-route-q="@ViewData["CurrentSearch"]" asp-route-LowestPriceEver=@ViewData["LowestPriceParm"] class="col-3 border-right">Data</a>
 		</div>
 	</div>
 	<section class="card-wrapper mt-5">
@@ -103,64 +106,66 @@
 
 	<div class="mt-3 p-1">
 		<ul class="pagination justify-content-center">
+
 			<li class="page-item @prevDisabled">
 				<a asp-action="Index"
 				   asp-route-sortBy="@ViewData["CurrentSort"]"
 				   asp-route-page="@(Model.PageIndex - 1)"
+				   asp-route-LowestPriceEver=@ViewData["LowestPriceParm"]
 				   class=" page-link @prevDisabled">
 					&laquo;
 				</a>
 			</li>
+
 			<li class="page-item active">
 				<a class="page-link" asp-action="Index"
 				   asp-route-sortBy="@ViewData["CurrentSort"]"
 				   asp-route-page="@(Model.PageIndex )"
 				   asp-route-q="@TempData["CurrentSearch"]"
-				   asp-route-categoria="@TempData["CurrentCategory"]">
+				   asp-route-categoria="@TempData["CurrentCategory"]"
+				   asp-route-LowestPriceEver=@ViewData["LowestPriceParm"]>
 					@(Model.PageIndex )
 				</a>
 			</li>
-			<li class="page-item">
-				<a class="page-link" asp-action="Index"
-				   asp-route-sortBy="@ViewData["CurrentSort"]"
-				   asp-route-page="@(Model.PageIndex + 1)"
-				   asp-route-q="@TempData["CurrentSearch"]"
-				   asp-route-categoria="@TempData["CurrentCategory"]">@(Model.PageIndex + 1)</a>
-			</li>
-			<li class="page-item">
-				<a class="page-link" asp-action="Index"
-				   asp-route-sortBy="@ViewData["CurrentSort"]"
-				   asp-route-page="@(Model.PageIndex + 2)"
-				   asp-route-q="@TempData["CurrentSearch"]"
-				   asp-route-categoria="@TempData["CurrentCategory"]">@(Model.PageIndex + 2)</a>
-			</li>
-			<li class="page-item">
-				<a class="page-link" asp-action="Index"
-				   asp-route-sortBy="@ViewData["CurrentSort"]"
-				   asp-route-page="@(Model.PageIndex +3 )"
-				   asp-route-q="@TempData["CurrentSearch"]"
-				   asp-route-categoria="@TempData["CurrentCategory"]">@(Model.PageIndex + 3)</a>
-			</li>
-			<li class="page-item">
-				<a class="page-link" asp-action="Index"
-				   asp-route-sortBy="@ViewData["CurrentSort"]"
-				   asp-route-page="@(Model.PageIndex + 4)"
-				   asp-route-q="@TempData["CurrentSearch"]"
-				   asp-route-categoria="@TempData["CurrentCategory"]">
-					@(Model.PageIndex + 4)
-				</a>
-			</li>
+			@for (int i = 1; i <= 4; i++)
+			{
+
+				<li class="page-item">
+					<a class="page-link" asp-action="Index"
+					   asp-route-sortBy="@ViewData["CurrentSort"]"
+					   asp-route-page="@(Model.PageIndex + i)"
+					   asp-route-q="@TempData["CurrentSearch"]"
+					   asp-route-categoria="@TempData["CurrentCategory"]"
+					   asp-route-LowestPriceEver=@ViewData["LowestPriceParm"]>@(Model.PageIndex + i)</a>
+				</li>
+
+			}
 			<li class="page-item ">
 				<a class="page-link @nextDisabled" asp-action="Index"
 				   asp-route-sortBy="@ViewData["CurrentSort"]"
 				   asp-route-page="@(Model.PageIndex + 1)"
 				   asp-route-q="@TempData["CurrentSearch"]"
-				   asp-route-categoria="@TempData["CurrentCategory"]">
+				   asp-route-categoria="@TempData["CurrentCategory"]"
+				   asp-route-LowestPriceEver=@ViewData["LowestPriceParm"]>
 					&raquo;
 				</a>
 			</li>
 		</ul>
 	</div>
+	@*<div class="mt-3 p-1">
+			<ul class="pagination justify-content-center">
+
+				<li class="page-item">
+					<a class="page-link" asp-action="Index"
+					   asp-route-sortBy="@ViewData[" CurrentSort"]"
+					   asp-route-page="@(Model.PageIndex + 4)"
+					   asp-route-q="@TempData[" CurrentSearch"]"
+					   asp-route-categoria="@TempData[" CurrentCategory"]">
+						@(Model.PageIndex + 4)
+					</a>
+				</li>
+			</ul>
+		</div>*@
 }
 
 else
@@ -170,6 +175,15 @@ else
 <!--container end-->
 @section Scripts
 	{
+	@*<script>
+			console.log("Waiting for checkbox input")
+			$("input[type='checkbox']").change(function () {
+				var item = $(this);
+				if (item.is(":checked")) {
+					location.href = item.siblings('a').attr('href');
+				}
+			});
+		</script>*@
 	<script>
 
 		$(window).scroll(function (e) {
@@ -184,4 +198,25 @@ else
 			}
 		});
 	</script>
+
+	@*<script>
+			$(document).ready(function () {
+				console.log("Função: submeter categoria");
+				var $selectElement = $('#selectCategory');
+				$selectElement.on('change', function () {
+					console.log("Mudou de select");
+
+					var $anchorElement = $('#submitCategory')[0];
+					alert("O elemento foi clicado" + this.value);
+
+					$anchorElement.setAttribute('href', $anchorElement.getAttribute('href') + "&categoria=" + this.value)
+					console.log("Atributo:" + $anchorElement.getAttribute('href'));
+					$anchorElement.click();
+					//if ($anchorElement.length) {
+					//	console.log("O elemento existe" + JSON.stringify($anchorElement));
+					//}
+
+				})
+			})
+		</script>*@
 }
