--- a/src/DescontosEmPortugal.Web/Views/Shared/_Layout.cshtml
+++ b/src/DescontosEmPortugal.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" href="~/css/main-layout.css" />
 	<link rel="stylesheet" href="~/css/contact-us.css" />
 	<link rel="stylesheet" href="~/css/product-price.css" />
-	<link rel="stylesheet" href="~/css/simple-sidebar.css" />
 </head>
 <body>
 	<header>
@@ -73,9 +72,8 @@
 	</footer>
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
-	<script src="~/js/productChart" asp-append-version="true"></script>
 	@RenderSection("Scripts", required: false)
 </body>
 </html>
