--- a/src/DescontosEmPortugal.Web/Views/Shared/_Layout.cshtml
+++ b/src/DescontosEmPortugal.Web/Views/Shared/_Layout.cshtml
@@ -49,7 +49,8 @@
 	<div class="container">
 		<partial name="_CookieConsentPartial" />
 		<main role="main" class="pb-3">
-			@RenderBody()
+			<partial name="_NotificationPanel">
+				@RenderBody()
 		</main>
 	</div>
 
@@ -73,6 +74,7 @@
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	@RenderSection("Scripts", required: false)
 </body>
